# projekt

./: .gitignore  CMakeLists.txt  Projekt.cpp  Projekt.h  funkce.cpp  test projekt.cpp  test.txt
